fix welcome modal for dark mode

--- a/src/app/welcome-modal/welcome-modal.component.scss
+++ b/src/app/welcome-modal/welcome-modal.component.scss
@@ -1,8 +1,12 @@
 .welcome-modal {
   border-radius: 6px;
-  background-color: #fff;
   text-align: center;
   overflow: hidden;
+  background: #fff;
+
+  @media(prefers-color-scheme: dark) {
+    background-color: #222;
+  }
 }
 
 .welcome-modal__header {
@@ -17,13 +21,13 @@
 }
 
 .welcome-modal__login-section {
-  background-color: #000;
   transform: rotateY(0deg) rotate(-5deg);
   width: 110%;
   margin-left: -5%;
   height: 300px;
   margin-top: 50px;
   overflow: hidden;
+  background-color: #000;
 }
 
 .welcome-modal__bg-container {
@@ -78,8 +82,12 @@
 .welcome-modal__callout-divider {
   width: 0.5rem;
   border-radius: 6px;
-  background-color: #E8E7E7;
   transform: rotateY(0deg) rotate(5deg);
+  background-color: #E8E7E7;
+
+  @media(prefers-color-scheme: dark) {
+    background-color: #666;
+  }
 }
 
 .welcome-modal__footer {
@@ -94,4 +102,5 @@
   background-color: #FFF7CF;
   padding: 0.75rem 0;
   border-radius: 8px;
+  color: #000;
 }
